Fix for menu background not showing

--- a/less/backgroundSelector.less
+++ b/less/backgroundSelector.less
@@ -11,16 +11,12 @@
 }
 
 .background-selector-enabled {
+  .menu__inner,
   .page__inner,
   .article__inner,
   .block__inner,
   .component__inner {
     position: relative;
-  }
-
-  .menu__header {
-    position: relative;
-    z-index: 1;
   }
 
   .background-selector-image {
